--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Cursos na Alura</button>
-                <button class="botao">Criar projetos em Javascript</button>
-                <button class="botao">Criar um portfolio</button>
-                <button class="botao">Atualizar meu currículo</button>
+                <button class="botao">Passar em uma faculdade pública</button>
+                <button class="botao">Focar nos estudos</button>
+                <button class="botao">Ser campeão representando a cidade</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
@@ -24,7 +24,7 @@
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
-                            <p class="contador-digito-numero" id="dias0"></p>
+                            <p class="contador-digito-numero" id="dias7"></p>
                             <p class="contador-digito-texto">dias</p>
                         </div>
                         <div class="contador-digito">
