--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Cursos na Alura</button>
+                <button class="botao ativo">Meus objetivos</button>
                 <button class="botao">Passar em uma faculdade pública</button>
                 <button class="botao">Focar nos estudos</button>
                 <button class="botao">Ser campeão representando a cidade</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Aprender a fazer alguma coisa que não sei</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
